--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -2,4 +2,4 @@
   %p= answer.body
   %p= formatted_date(answer.created_at)
   .col-sm-3
-    .col-sm-2= button_to "delete", question_answers_path(@question, @answer), method: :delete, class: "btn btn-default", data: {confirm: "Are you sure you want to delete this answer?"}
+    .col-sm-2= button_to 'delete', question_answer_path(@question, answer), method: :delete, class: "btn btn-default", data: {confirm: "Are you sure you want to delete this answer?"}
