--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -1,4 +1,5 @@
 .lightwell.answer.col-sm-3{id: dom_id(answer)}
+  %p= author(answer.user)
   %p= answer.body
   %p= formatted_date(answer.created_at)
   .col-sm-3
