--- a/app/views/answers/_answer.html.haml
+++ b/app/views/answers/_answer.html.haml
@@ -1,6 +1,6 @@
 .lightwell.answer.col-sm-3{id: dom_id(answer)}
   %p= author(answer.user)
-  %p= best_in_place_if answer.user == current_user, answer, :body,  url: question_answer_path(@question, answer), method: :put
+  %p= best_in_place_if answer.user == current_user, answer, :body,  url: question_answer_path(@question, answer), method: :put, as: :textarea
   %p{id: "#{answer.id}"}= formatted_date(answer.updated_at)
   .col-sm-20
     .col-sm-4= button_to 'delete', question_answer_path(@question, answer), method: :delete, class: "btn btn-default", data: {confirm: "Are you sure you want to delete this answer?"}
