--- a/app/assets/stylesheets/bootstrap_and_css_overrides.css.scss
+++ b/app/assets/stylesheets/bootstrap_and_css_overrides.css.scss
@@ -48,7 +48,7 @@ body {
   margin: 0;
   height: 300px;
   padding: 15px;
-  overflow: hidden;
+  overflow: scroll;
   background-color: rgba(200, 200, 200, 0.9);
   color: #444;
   &:hover {
